# ccline

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODEX.md  Cargo.toml  README.md  README.zh.md
.github/workflows/: release.yml
docs/: CODEX_INTEGRATION.md  CODEX_INTEGRATION_SUMMARY.md
examples/: test_codex_statusline.sh  test_full_statusline.rs
src/: main.rs  updater.rs
src/billing/: pricing.rs
src/config/: block_overrides.rs  mod.rs  tui.rs  types.rs
src/core/segments/: burn_rate.rs  cost.rs  model.rs  usage.rs
src/utils/: data_loader.rs  mod.rs  paths.rs  transcript.rs
tests/: codex_integration_test.rs
