[package]
name = "ccometixline"
version = "1.0.0"
edition = "2021"
description = "CCometixLine (ccline) - High-performance Claude Code StatusLine tool written in Rust"
authors = ["Haleclipse"]
license = "MIT"
repository = "https://github.com/username/CCometixLine"
readme = "README.md"
keywords = ["claude", "codex", "statusline", "powerline", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
ureq = { version = "2.10", default-features = false, features = ["json", "tls"], optional = true }
semver = { version = "1.0", optional = true }
chrono = { version = "0.4", features = ["serde"] }
dirs = { version = "5.0", optional = true }
tokio = { version = "1.41", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
once_cell = "1.20"
glob = "0.3"

[features]
default = ["self-update"]
self-update = ["ureq", "semver", "dirs"]
